deploy/dev/infra/kubernetes/openmetadata-secrets.yaml
# https://docs.open-metadata.org/v1.12.x/quick-start/local-kubernetes-deployment
# Create the namespace and the kubernetes secrets that contain the MySQL and Airflow passwords.
apiVersion: v1
kind: Namespace
metadata:
  name: openmetadata
