deploy/dev/infra/kubernetes/thalamus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: thalamus
