deploy/dev/infra/kubernetes/ui-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: naira-ui
  namespace: platform-mesh-system
spec:
  hostnames:
  - ui.portal.localhost
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: k8sapi-gateway
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: ui
      namespace: idp-system
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
